# Shade

./: .gitignore  NOTICE  README.md  demo.sh  docker-compose.yml  package-lock.json  package.json  run-stress-test.sh  tsconfig.base.json
contracts/: Cargo.toml  deploy.sh
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  types.rs
contracts/registry/test_snapshots/tests/: test_announce_and_get.1.json  test_deposit_creates_balance_and_announcement.1.json  test_deposit_increments_balance.1.json  test_deposit_withdraw_still_pass_after_read_ttl_change.1.json  test_get_announcements_by_tag.1.json  test_get_announcements_by_tag_pagination.1.json  test_get_announcements_limit_overflow_no_panic.1.json  test_get_announcements_paging_edges.1.json  test_get_balance_read_extends_ttl.1.json  test_get_nonce_read_extends_ttl.1.json  test_keyed_storage_deposit_does_not_scale_with_history.1.json  test_multi_token_deposits.1.json  test_pagination.1.json  test_register_and_lookup.1.json  test_withdraw_clears_zero_balance.1.json  test_withdraw_insufficient_balance.1.json  test_withdraw_invalid_signature.1.json  test_withdraw_message_binds_contract_and_network.1.json  test_withdraw_message_matches_cross_language_vector.1.json  test_withdraw_replay_protection.1.json  test_withdraw_valid_signature.1.json
docs/: 01-introduction.md  02-core-concepts.md  03-architecture.md  04-delivery-methods.md  05-getting-started.md  06-cli-reference.md  07-sdk-reference.md  08-relayer.md  09-security.md  10-faq-troubleshooting.md  OVERVIEW.md  RESULTS-testnet-smoke.md
